<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/resultText"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/assessedResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/assessedResult"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="112sp" />

    <Button
        android:id="@+id/replay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_weight="3"
        android:background="@color/colorPrimaryLight"
        android:text="@string/playAgain" />

</LinearLayout>