<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/assessedResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/imageleft" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:layout_weight="4"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/operandTextView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="@string/operand1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/operandTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="@string/operand2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/operandTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="@string/operand3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/operandTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="@string/operand4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/operandTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="@string/operand5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorPrimaryLight"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp" />

            <Button
                android:id="@+id/nextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/next" />

        </LinearLayout>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/imageright" />

    </LinearLayout>

</RelativeLayout>